cleaned up script; tested for bigger data set; works fine

--- a/tester.ipynb
+++ b/tester.ipynb
@@ -26,21 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 25), (25, 50), (50, 75), (75, 100)]\n"
+      "[(0, 8199), (8199, 16398), (16398, 24597), (24597, 32796)]\n"
      ]
     }
    ],
    "source": [
     "cores = mp.cpu_count()\n",
-    "# rows = data.shape[0]\n",
-    "rows = 100\n",
+    "rows = data.shape[0]\n",
     "group = rows // cores\n",
     "\n",
     "mpCount = [(group*i,group*(i+1)) for i in range(cores)]\n",
@@ -50,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mp_transitTime(index):\n",
     "    cols = ['Trip ID','Duration (min)','Walking Time (min)','Transit Time (min)',\n",
-    "            'Walking Distance (m)','Transfers','Message']\n",
+    "            'Walking Distance (Mi)','Transfers','Message']\n",
     "    responses = {cols[0]:[],cols[1]:[],cols[2]:[],\n",
     "                 cols[3]:[],cols[4]:[],cols[5]:[],cols[6]:[]}\n",
     "    worker = mp.current_process()\n",
@@ -74,11 +73,13 @@
     "        url = localhost + 'plan?'\n",
     "        url += 'fromPlace={0},{1}'.format(vals[1],vals[2])\n",
     "        url += '&toPlace={0},{1}'.format(vals[3],vals[4])\n",
-    "        url += '&time={0}'.format(vals[5]) # 1:02pm\n",
-    "        url += '&date={0}'.format(vals[6]) # 11-13-2017\n",
+    "        url += '&time={0}'.format(vals[5])\n",
+    "        url += '&date={0}'.format(vals[6])\n",
     "        url += '&mode=TRANSIT,WALK'\n",
-    "        url += '&maxWalkDistance=10000'\n",
+    "        # 805, 3220, 8047\n",
+    "        url += '&maxWalkDistance=805'\n",
     "        url += '&arriveBy=true'\n",
+    "        url += '&optimize=QUICK'\n",
     "        response = requests.get(url).json()\n",
     "\n",
     "        responses[cols[0]].append(vals[0])\n",
@@ -88,7 +89,7 @@
     "            responses[cols[1]].append(r[0]['duration']/60)\n",
     "            responses[cols[2]].append(r[0]['walkTime']/60)\n",
     "            responses[cols[3]].append(r[0]['transitTime']/60)\n",
-    "            responses[cols[4]].append(r[0]['walkDistance'])\n",
+    "            responses[cols[4]].append(r[0]['walkDistance']/1609.34)\n",
     "            responses[cols[5]].append(r[0]['transfers'])\n",
     "            responses[cols[6]].append('Successful Run')\n",
     "        else:\n",
@@ -106,20 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting processing at 102743\n",
-      "index (75, 100) done processing 1028 ForkPoolWorker-3\n",
-      "index (0, 25) done processing 1028 ForkPoolWorker-1\n",
-      "index (25, 50) done processing 1028 ForkPoolWorker-2\n",
-      "index (50, 75) done processing 1028 ForkPoolWorker-4\n",
-      "Finished processing at 102824\n",
-      "(25, 7)\n"
+      "Starting processing at 154007\n",
+      "index (0, 8199) done processing 1607 ForkPoolWorker-1\n",
+      "index (16398, 24597) done processing 1608 ForkPoolWorker-3\n",
+      "index (24597, 32796) done processing 1608 ForkPoolWorker-4\n",
+      "index (8199, 16398) done processing 1611 ForkPoolWorker-2\n",
+      "Finished processing at 161127\n",
+      "(32796, 7)\n"
      ]
     },
     {
@@ -155,53 +156,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1394827</td>\n",
-       "      <td>17.533333</td>\n",
-       "      <td>17.533333</td>\n",
+       "      <td>1248167</td>\n",
+       "      <td>16.966667</td>\n",
+       "      <td>16.966667</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1347.135308</td>\n",
+       "      <td>1315.121301</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Successful Run</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1364007</td>\n",
-       "      <td>169.933333</td>\n",
-       "      <td>148.900000</td>\n",
-       "      <td>21.000000</td>\n",
-       "      <td>11579.655218</td>\n",
+       "      <td>1108571</td>\n",
+       "      <td>22.150000</td>\n",
+       "      <td>18.500000</td>\n",
+       "      <td>3.616667</td>\n",
+       "      <td>1400.756331</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Successful Run</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1022291</td>\n",
-       "      <td>56.766667</td>\n",
-       "      <td>52.966667</td>\n",
-       "      <td>3.766667</td>\n",
-       "      <td>4119.655692</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Successful Run</td>\n",
+       "      <td>1229641</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No trip found.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1507106</td>\n",
-       "      <td>65.916667</td>\n",
-       "      <td>65.916667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>5100.425188</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Successful Run</td>\n",
+       "      <td>1022430</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No trip found.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>947540</td>\n",
-       "      <td>68.816667</td>\n",
-       "      <td>68.816667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>5336.424481</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Successful Run</td>\n",
+       "      <td>1327145</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No trip found.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -209,21 +210,21 @@
       ],
       "text/plain": [
        "   Trip ID  Duration (min)  Walking Time (min)  Transit Time (min)  \\\n",
-       "0  1394827       17.533333           17.533333            0.000000   \n",
-       "1  1364007      169.933333          148.900000           21.000000   \n",
-       "2  1022291       56.766667           52.966667            3.766667   \n",
-       "3  1507106       65.916667           65.916667            0.000000   \n",
-       "4   947540       68.816667           68.816667            0.000000   \n",
+       "0  1248167       16.966667           16.966667            0.000000   \n",
+       "1  1108571       22.150000           18.500000            3.616667   \n",
+       "2  1229641             NaN                 NaN                 NaN   \n",
+       "3  1022430             NaN                 NaN                 NaN   \n",
+       "4  1327145             NaN                 NaN                 NaN   \n",
        "\n",
        "   Walking Distance (m)  Transfers         Message  \n",
-       "0           1347.135308        0.0  Successful Run  \n",
-       "1          11579.655218        0.0  Successful Run  \n",
-       "2           4119.655692        0.0  Successful Run  \n",
-       "3           5100.425188        0.0  Successful Run  \n",
-       "4           5336.424481        0.0  Successful Run  "
+       "0           1315.121301        0.0  Successful Run  \n",
+       "1           1400.756331        0.0  Successful Run  \n",
+       "2                   NaN        NaN  No trip found.  \n",
+       "3                   NaN        NaN  No trip found.  \n",
+       "4                   NaN        NaN  No trip found.  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,20 +250,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "now = dt.datetime.now().strftime(\"%Y%m%d-%H%M\")\n",
-    "df.to_csv(now + 'transitTimes.csv')"
+    "df.to_csv(now + 'transitTimesTwoMiles.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "No trip found.    25344\n",
+       "Successful Run     7417\n",
+       "Origin is with       35\n",
+       "Name: Message, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Message'].value_counts()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3Project",
+   "display_name": "Python3ITS",
    "language": "python",
-   "name": "python3project"
+   "name": "python3its"
   },
   "language_info": {
    "codemirror_mode": {
@@ -274,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
