--- a/tester.ipynb
+++ b/tester.ipynb
@@ -2,6 +2,299 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkTransit as nt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('SperoniOSRMdata.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trip_id</th>\n",
+       "      <th>origin_lat</th>\n",
+       "      <th>origin_lon</th>\n",
+       "      <th>dest_lat</th>\n",
+       "      <th>dest_lon</th>\n",
+       "      <th>dur_actual</th>\n",
+       "      <th>dist_pred</th>\n",
+       "      <th>sched_end</th>\n",
+       "      <th>date_only</th>\n",
+       "      <th>sched_end_time_only</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>dep_origin</th>\n",
+       "      <th>arr_at_dest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1248167</td>\n",
+       "      <td>33.91</td>\n",
+       "      <td>-118.35</td>\n",
+       "      <td>33.92</td>\n",
+       "      <td>-118.35</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1/28/19 7:38</td>\n",
+       "      <td>1/28/19 0:00</td>\n",
+       "      <td>7:38:17</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>1/28/19 7:29</td>\n",
+       "      <td>1/28/19 7:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1108571</td>\n",
+       "      <td>34.05</td>\n",
+       "      <td>-118.24</td>\n",
+       "      <td>34.05</td>\n",
+       "      <td>-118.26</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12/6/18 7:28</td>\n",
+       "      <td>12/6/18 0:00</td>\n",
+       "      <td>7:28:48</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>12/6/18 7:32</td>\n",
+       "      <td>12/6/18 7:44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1229641</td>\n",
+       "      <td>33.94</td>\n",
+       "      <td>-118.02</td>\n",
+       "      <td>33.97</td>\n",
+       "      <td>-118.08</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1/25/19 6:32</td>\n",
+       "      <td>1/25/19 0:00</td>\n",
+       "      <td>6:32:36</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1/25/19 6:23</td>\n",
+       "      <td>1/25/19 6:39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1022430</td>\n",
+       "      <td>34.00</td>\n",
+       "      <td>-118.46</td>\n",
+       "      <td>34.03</td>\n",
+       "      <td>-118.46</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10/26/18 7:29</td>\n",
+       "      <td>10/26/18 0:00</td>\n",
+       "      <td>7:29:45</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>10/26/18 7:19</td>\n",
+       "      <td>10/26/18 7:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1327145</td>\n",
+       "      <td>33.87</td>\n",
+       "      <td>-118.25</td>\n",
+       "      <td>33.73</td>\n",
+       "      <td>-118.30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2/19/19 7:23</td>\n",
+       "      <td>2/19/19 0:00</td>\n",
+       "      <td>7:23:17</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>2/19/19 7:00</td>\n",
+       "      <td>2/19/19 7:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32791</th>\n",
+       "      <td>1304850</td>\n",
+       "      <td>33.87</td>\n",
+       "      <td>-118.09</td>\n",
+       "      <td>33.89</td>\n",
+       "      <td>-118.23</td>\n",
+       "      <td>31</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5/15/19 7:40</td>\n",
+       "      <td>5/15/19 0:00</td>\n",
+       "      <td>7:40:00</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>5/15/19 7:13</td>\n",
+       "      <td>5/15/19 7:44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32792</th>\n",
+       "      <td>1146061</td>\n",
+       "      <td>34.03</td>\n",
+       "      <td>-118.35</td>\n",
+       "      <td>33.96</td>\n",
+       "      <td>-118.29</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3/8/19 7:11</td>\n",
+       "      <td>3/8/19 0:00</td>\n",
+       "      <td>7:11:22</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>3/8/19 6:51</td>\n",
+       "      <td>3/8/19 7:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32793</th>\n",
+       "      <td>1438088</td>\n",
+       "      <td>33.96</td>\n",
+       "      <td>-118.26</td>\n",
+       "      <td>34.04</td>\n",
+       "      <td>-117.75</td>\n",
+       "      <td>52</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4/12/19 7:45</td>\n",
+       "      <td>4/12/19 0:00</td>\n",
+       "      <td>7:45:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>4/12/19 6:45</td>\n",
+       "      <td>4/12/19 7:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32794</th>\n",
+       "      <td>1473101</td>\n",
+       "      <td>34.06</td>\n",
+       "      <td>-118.27</td>\n",
+       "      <td>34.16</td>\n",
+       "      <td>-118.09</td>\n",
+       "      <td>24</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4/22/19 7:20</td>\n",
+       "      <td>4/22/19 0:00</td>\n",
+       "      <td>7:20:00</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>4/22/19 6:58</td>\n",
+       "      <td>4/22/19 7:22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32795</th>\n",
+       "      <td>1337677</td>\n",
+       "      <td>34.71</td>\n",
+       "      <td>-118.10</td>\n",
+       "      <td>34.69</td>\n",
+       "      <td>-118.19</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4/22/19 7:12</td>\n",
+       "      <td>4/22/19 0:00</td>\n",
+       "      <td>7:12:00</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>4/22/19 6:55</td>\n",
+       "      <td>4/22/19 7:08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32796 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       trip_id  origin_lat  origin_lon  dest_lat  dest_lon  dur_actual  \\\n",
+       "0      1248167       33.91     -118.35     33.92   -118.35           7   \n",
+       "1      1108571       34.05     -118.24     34.05   -118.26          12   \n",
+       "2      1229641       33.94     -118.02     33.97   -118.08          16   \n",
+       "3      1022430       34.00     -118.46     34.03   -118.46          13   \n",
+       "4      1327145       33.87     -118.25     33.73   -118.30          30   \n",
+       "...        ...         ...         ...       ...       ...         ...   \n",
+       "32791  1304850       33.87     -118.09     33.89   -118.23          31   \n",
+       "32792  1146061       34.03     -118.35     33.96   -118.29          23   \n",
+       "32793  1438088       33.96     -118.26     34.04   -117.75          52   \n",
+       "32794  1473101       34.06     -118.27     34.16   -118.09          24   \n",
+       "32795  1337677       34.71     -118.10     34.69   -118.19          13   \n",
+       "\n",
+       "       dist_pred      sched_end      date_only sched_end_time_only  \\\n",
+       "0              1   1/28/19 7:38   1/28/19 0:00             7:38:17   \n",
+       "1              1   12/6/18 7:28   12/6/18 0:00             7:28:48   \n",
+       "2              4   1/25/19 6:32   1/25/19 0:00             6:32:36   \n",
+       "3              4  10/26/18 7:29  10/26/18 0:00             7:29:45   \n",
+       "4             12   2/19/19 7:23   2/19/19 0:00             7:23:17   \n",
+       "...          ...            ...            ...                 ...   \n",
+       "32791         10   5/15/19 7:40   5/15/19 0:00             7:40:00   \n",
+       "32792         11    3/8/19 7:11    3/8/19 0:00             7:11:22   \n",
+       "32793         40   4/12/19 7:45   4/12/19 0:00             7:45:00   \n",
+       "32794         16   4/22/19 7:20   4/22/19 0:00             7:20:00   \n",
+       "32795          8   4/22/19 7:12   4/22/19 0:00             7:12:00   \n",
+       "\n",
+       "      day_of_week     dep_origin    arr_at_dest  \n",
+       "0          Monday   1/28/19 7:29   1/28/19 7:36  \n",
+       "1        Thursday   12/6/18 7:32   12/6/18 7:44  \n",
+       "2          Friday   1/25/19 6:23   1/25/19 6:39  \n",
+       "3          Friday  10/26/18 7:19  10/26/18 7:33  \n",
+       "4         Tuesday   2/19/19 7:00   2/19/19 7:31  \n",
+       "...           ...            ...            ...  \n",
+       "32791   Wednesday   5/15/19 7:13   5/15/19 7:44  \n",
+       "32792      Friday    3/8/19 6:51    3/8/19 7:14  \n",
+       "32793      Friday   4/12/19 6:45   4/12/19 7:37  \n",
+       "32794      Monday   4/22/19 6:58   4/22/19 7:22  \n",
+       "32795      Monday   4/22/19 6:55   4/22/19 7:08  \n",
+       "\n",
+       "[32796 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -26,23 +319,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.5'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAXW = 805\n",
+    "\n",
+    "'{0:1.1f}'.format(MAXW/1609)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 8199), (8199, 16398), (16398, 24597), (24597, 32796)]\n"
+      "[(0, 1), (1, 2), (2, 3), (3, 4)]\n"
      ]
     }
    ],
    "source": [
     "cores = mp.cpu_count()\n",
-    "rows = data.shape[0]\n",
+    "rows = 4\n",
     "group = rows // cores\n",
     "\n",
-    "mpCount = [(group*i,group*(i+1)) for i in range(cores)]\n",
+    "\n",
+    "mpCount = [(group*i,group*(i+1)) if i < cores-1\n",
+    "           else (group*i,rows)\n",
+    "           for i in range(cores)]\n",
     "\n",
     "print(mpCount)"
    ]
@@ -284,9 +602,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3ITS",
+   "display_name": "Python3Project",
    "language": "python",
-   "name": "python3its"
+   "name": "python3project"
   },
   "language_info": {
    "codemirror_mode": {
@@ -298,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
