--- a/README.org
+++ b/README.org
@@ -30,16 +30,17 @@ Project was created by David James for the Institute of Transportation Studies (
         1. Go to https://repo1.maven.org/maven2/org/opentripplanner/otp/
         2. Navigate to the directory of the highest version number and download the file with extension .shaded.jar.
      2. You will need to collect the necessary GTFS files and the needed map file, so OTP knows what it will be generating
+        NOTE :: check this out
         1. NOTE :: GTFS files must be zipped up, and all its contents should be in the root of the zip archive
         2. the map file is downloaded from http://download.geofabrik.de/ go through the subregions until you find the map resolution that you need and download the .osm.pbf file
-     3. You should shrink your pbf map file, so that you don't need as much RAM to run the server
+     4. You should shrink your pbf map file, so that you don't need as much RAM to run the server
         #+BEGIN_SRC bash
           # this is an example of the command that can shrink the pbf file
           # you will need to install osmconvert if your system doesn't have it yet
           osmconvert oregon-latest.osm.pbf -b=-123.043,45.246,-122.276,45.652 --complete-ways -o=portland.pbf
         #+END_SRC
         1. https://boundingbox.klokantech.com/ set to CSV outputs the value needed for the -b flag
-     4. After you have gotten the necessary files, we will put the files in the following directory manner
+     5. After you have gotten the necessary files, we will put the files in the following directory manner
         1. the root directory will be "otp" and it'll contain a "graphs" directoy and the .jar file from (step i.)
         2. the "graphs" directory will have another directory called "current"
         3. the "current" directory will contain your gtfs files (step ii.) and the pbf map file (step iii.)
