--- a/README.org
+++ b/README.org
@@ -25,7 +25,7 @@ Project was created by [[https://github.com/dj-2805][David James]] for the Insti
 * Installing and Setting Up
   Before beging, you will need to run any bash commands from your terminal.
   If you're running a Mac, search for the application called 'terminal'.
-  1. _Collecting files_
+  _1. Collecting files_
      1. You will need to collect the otp.jar file
         1. Go [[https://repo1.maven.org/maven2/org/opentripplanner/otp/][here]]
         2. Navigate to the directory of the highest version number and download the file with extension .shaded.jar.
@@ -68,5 +68,6 @@ Project was created by [[https://github.com/dj-2805][David James]] for the Insti
   2. _Response from the server_
      1. The response will give a json output. Where the current script takes the time values of the trip.
         - Remark :: For more documentation on what OTP can output refer to [[http://dev.opentripplanner.org/apidoc/1.0.0/json_Response.html][this]] for a description of their =JSON= response.
-  4. Extra Help
-     1. If extra instruction is needed to setup OTP refer to [[http://docs.opentripplanner.org/en/latest/Basic-Tutorial/][this]]
+* Extra Help
+  1. If extra instruction is needed to setup OTP refer to [[http://docs.opentripplanner.org/en/latest/Basic-Tutorial/][this]]
+  2. In the =util= directory of this repository is another instruction file =intro-otp.pdf= that comes from [[https://github.com/marcusyoung/otp-tutorial][this]]
